k8s/kind/ts-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ts-express-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: node
